# OpenGLStudy

./: .gitignore  CMakeLists.txt  main.cpp  main_camera.cpp  main_depthtest.cpp  main_geometry.cpp  main_glm.cpp  main_mipmap.cpp
application/: Application.cpp  Application.h  CMakeLists.txt
application/camera/: camera.cpp  camera.h  cameraControl.cpp  cameraControl.h  gameCameraControl.cpp  gameCameraControl.h  orthographicCamera.cpp  orthographicCamera.h  perspectiveCamera.cpp  perspectiveCamera.h  trackBallCameraControl.cpp  trackBallCameraControl.h
assets/shaders/: fragment.glsl  fragment_glm.glsl  fragment_mipmap.glsl  vertex.glsl  vertex_geometry.glsl  vertex_glm.glsl
glframework/: core.h  geometry.cpp  geometry.h  shader.cpp  shader.h  texture.cpp  texture.h
wrapper/: checkError.cpp  checkError.h
